--- a/css/zoom.css
+++ b/css/zoom.css
@@ -7,9 +7,9 @@ img[data-action="zoom"] {
 .zoom-img-wrap {
   position: relative;
   z-index: 99999;
-  -webkit-transition: all 300ms;
-       -o-transition: all 300ms;
-          transition: all 300ms;
+  -webkit-transition: all 100ms;
+       -o-transition: all 100ms;
+          transition: all 100ms;
 }
 img.zoom-img {
   cursor: pointer;
@@ -26,7 +26,7 @@ img.zoom-img {
 }
 .zoom-overlay {
   z-index: 9999;
-  background: #fff;
+  background: black;
   position: fixed;
   top: 0;
   left: 0;
