--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 body {
   font-family: 'Lato', 'Helvetica', 'Verdana', sans-serif;
-  background: #919191;
+  background: #f9e8b6;
 }
 
 #container {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1777px;
   width: 90%;
 }
 
 .header {
   margin-top: 124px;
   margin-bottom: 32px;
-
   font-size: 30px;
   font-weight: 900;
   letter-spacing: 3px;
@@ -39,8 +38,7 @@ section img.img-loaded {
 
 h3 {
   margin-bottom: 36px;
-
-  color: #666;
+  color: rgb(147, 147, 147);
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 400;
@@ -49,7 +47,6 @@ h3 {
 
 .footer {
   padding-bottom: 32px;
-
   color: #999;
   font-weight: 300;
   text-align: center;
